[package]
name = "fprint"
description = "Flushed print"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

license = "MIT"
repository = "https://github.com/PatriotRossii/fprint/"
documentation = "https://docs.rs/fprint/"

categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
